--- a/BlazorCssIsolationConfiguration/Layout/MainLayout.razor
+++ b/BlazorCssIsolationConfiguration/Layout/MainLayout.razor
@@ -1,3 +1,8 @@
 ﻿@inherits LayoutComponentBase
 
-@Body
+<div id="main">
+    @Body
+    <NavLink href="counter" scopeAnt>Counter</NavLink>
+
+    <a href="counter">Counter</a>
+</div>
